# RAGnarok

./: .gitignore  Dockerfile  RAG_DEBUGGER_COMPLETE_DOCS.md  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: cli.py  config.py  main.py  timeutils.py
backend/adapters/: base.py
backend/adapters/embeddings/: huggingface_embed.py  openai_embed.py
backend/adapters/llms/: groq_llm.py  openai_llm.py
backend/adapters/retrievers/: chroma_adapter.py
backend/api/middleware/: auth.py
backend/api/routes/: reports.py  sessions.py  stream.py  validate.py
backend/core/: bm25_engine.py  compound_classifier.py  generation_diagnostics.py  recommendation_engine.py  retrieval_diagnostics.py  similarity_scorer.py  threshold_calibrator.py
backend/db/: database.py  orm_models.py
backend/models/: config.py  report.py  session.py
backend/security/: pickle_detector.py  pii_redactor.py  secret_scrubber.py
backend/services/: report_service.py  session_service.py
examples/: pipeline.yaml  queries.json  quickstart.py  seed_chroma.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ArcGauge.jsx  NewSessionModal.jsx  QueryCard.jsx  RecommendationPanel.jsx  Sidebar.jsx  SignalTrace.jsx
frontend/src/pages/: EmptyState.jsx  SessionView.jsx
frontend/src/utils/: diagnosis.js
tests/: conftest.py
tests/api/: test_auth_middleware.py  test_sessions_endpoint.py  test_validate_endpoint.py
tests/golden_set/: sample_pipeline.yaml  sample_queries.json
tests/unit/core/: test_bm25_engine.py  test_compound_classifier.py  test_config_validation.py  test_generation_diagnostics.py  test_recommendation_engine.py  test_retrieval_diagnostics.py  test_similarity_scorer.py  test_threshold_calibrator.py
tests/unit/security/: test_cli_pickle_guard.py  test_secret_scrubber.py
tests/unit/services/: conftest.py  test_adapter_factory_dispatch.py  test_report_service.py  test_session_service.py
