[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-debugger"
version = "1.0.0"
description = "Automated diagnostic tool for RAG pipeline failure attribution"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Prakruti Bhaskar" }]
keywords = ["rag", "llm", "debugging", "ai", "vector-search", "diagnostics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=2.1.0",
    # CLI
    "typer>=0.12.3",
    "rich>=13.7.1",
    # Data validation
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "aiosqlite>=0.20.0",
    # ML / Retrieval
    "rank-bm25>=0.2.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.2",
    # Report generation
    "jinja2>=3.1.4",
    # YAML parsing
    "pyyaml>=6.0.1",
    # HTTP client (for adapters)
    "httpx>=0.27.0",
    # OpenAI (default adapter)
    "openai>=1.30.1",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.5.0"]
pinecone = ["pinecone-client>=4.1.0"]
qdrant = ["qdrant-client>=1.9.1"]
cohere = ["cohere>=5.5.3"]
huggingface = ["sentence-transformers>=3.0.0"]
anthropic = ["anthropic>=0.28.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",          # TestClient
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "pip-audit>=2.7.3",
    "bandit>=1.7.9",
    "detect-secrets>=1.5.0",
    "playwright>=1.44.0",
]

[project.scripts]
rag-debug = "backend.cli:app"

[project.urls]
Homepage = "https://github.com/PrakrutiBhaskar/rag-debugger"
Documentation = "https://github.com/PrakrutiBhaskar/rag-debugger/docs"
Repository = "https://github.com/PrakrutiBhaskar/rag-debugger"
"Bug Tracker" = "https://github.com/PrakrutiBhaskar/rag-debugger/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "ANN"]
ignore = ["ANN101", "ANN102", "S101"]   # allow self/cls unannotated, allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=backend --cov-report=term-missing --cov-fail-under=70"

# ── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
omit = ["tests/*", "backend/db/migrations/*"]